# baro

./: .gitignore  CLAUDE.md  README.md  TASKS.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: exception_handlers.py  exceptions.py  models.py  pagination.py  redis.py  schemas.py
backend/app/domains/company/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/dashboard/: dependencies.py  router.py  schemas.py  service.py
backend/app/domains/news/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/product/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/spec_change/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/spec_field/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/integrations/llm/: interface.py  openai_provider.py  prompts.py  schemas.py
backend/app/integrations/news_source/: google_collector.py  interface.py  naver_collector.py  schemas.py
backend/app/services/: news_pipeline.py
backend/migrations/: env.py
backend/migrations/versions/: 1dbfd7d7d0f8_add_phase_2_tables.py  9db9a4d8b889_add_phase_1_tables.py
backend/tests/: conftest.py
backend/tests/domains/company/: test_router.py
backend/tests/domains/dashboard/: test_router.py
backend/tests/domains/news/: test_router.py
backend/tests/domains/product/: test_compare.py  test_router.py
(+50 files in other folders)
